before solve 键盘

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">basecapsule</string>
+    <string name="title_activity_input">InputActivity</string>
 </resources>
